tests/snapshots/error_diagnostics__bare_keys_mysql_style.snap
---
source: tests/error_diagnostics.rs
expression: "errors(\"[mysqldump]\\nquick\\nquote-names\\nmax = 64M\\n\")"
---
INI parse error at line 2, column 6
  |
  2 | quick
  |      ^
  = expected '=' or ':'

INI parse error at line 3, column 12
  |
  3 | quote-names
  |            ^
  = expected '=' or ':'
