tests/snapshots/error_diagnostics__missing_separator.snap
---
source: tests/error_diagnostics.rs
expression: "errors(\"[s]\\nbare_key\\n\")"
---
INI parse error at line 2, column 9
  |
  2 | bare_key
  |         ^
  = expected '=' or ':'
