tests/snapshots/error_diagnostics__multiple_errors.snap
---
source: tests/error_diagnostics.rs
expression: "errors(\"[unclosed\\nbare_key\\n\")"
---
INI parse error at line 1, column 10
  |
  1 | [unclosed
  |          ^
  = expected ']'

INI parse error at line 2, column 9
  |
  2 | bare_key
  |         ^
  = expected '=' or ':'
