tests/snapshots/error_diagnostics__stray_bracket_at_root.snap
---
source: tests/error_diagnostics.rs
expression: "errors(\"]\\n[s]\\nk=v\\n\")"
---
INI parse error at line 1, column 2
  |
  1 | ]
  |  ^
  = expected '=' or ':'
